# rixs_nn_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/temperature/: dos.pkl
data/temperature/rixs_spectra/: rixs_temp_0.pkl  rixs_temp_1.pkl  rixs_temp_10.pkl  rixs_temp_2.pkl  rixs_temp_3.pkl  rixs_temp_4.pkl  rixs_temp_5.pkl  rixs_temp_6.pkl  rixs_temp_7.pkl  rixs_temp_8.pkl  rixs_temp_9.pkl
data/temperature_full_baseline/: xfel_spectra.pkl
data/temperature_full_baseline/rixs_spectra/: rixs_temp_10.pkl  rixs_temp_4.pkl  rixs_temp_5.pkl  rixs_temp_6.pkl  (+3 more)
diff_rixs/: __init__.py  rixs_model.py  torch_components.py
end_to_end/: __init__.py  __main__.py  dataset.py  model_conv.py  model_dense.py  model_joint.py  test.py  train.py
models/noise00/: neural_dos_0.pt  neural_dos_1.pt  neural_dos_2.pt  neural_dos_3.pt  neural_dos_4.pt  neural_dos_5.pt
models/noise10/: neural_dos_0.pt  neural_dos_1.pt  neural_dos_2.pt  neural_dos_3.pt  neural_dos_4.pt  neural_dos_5.pt
models/noise20/: neural_dos_0.pt  neural_dos_1.pt  neural_dos_2.pt  neural_dos_3.pt  neural_dos_4.pt  neural_dos_5.pt
models/noise30/: neural_dos_0.pt  neural_dos_1.pt  neural_dos_2.pt  neural_dos_3.pt  neural_dos_4.pt  neural_dos_5.pt
physics_util/: __init__.py  density_of_states.py  gen_temp_data.py  material.py  spectra.py  thermodynamics.py
plot/: __main__.py  figure_3.py  figure_4_panels.py  figure_5.py  figure_5_data.json  figure_6.py  figure_6_data.json  plot_temp_models.py  plot_temperature.py
step/: __main__.py  eval.py  test.py  train.py  train_temperature.py
(+383 files in other folders)
