[tool.poetry]
name = "rixs-analysis"
version = "0.1.0"
description = ""
authors = ["Anonymous"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
torch = "2.0.0"
scipy = "^1.10.1"
jupyter = "^1.0.0"
deprecated = "^1.2.13"
tqdm = "^4.65.0"
click = "^8.1.3"
torchviz = "^0.0.2"
xitorch = "^0.5.1"
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.4"
black = "^23.1.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
